tests/golden/expected/multi_nodirect.stdout.txt
Compile error: tests/fixtures/multi_nodirect.lamp:10: type error: action "greet" is marked multi but has no direct slot
  10 | action greet:
    | ^
